fix: #1032 Fix encoding for GitLab URL and allow switching base URL when resolving dependencies. Also introduced a new test using GitLab Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>